--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "cors": "^2.8.4",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.4",
     "express": "^4.14.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^4.7.0",
     "node-restful": "^0.2.5"
   }
